Crear nuevo  archivo index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div> HOLA MUNDO</div>
+    <div>hola</div>
+    <table>
+        <thead>
+            <tr>
+                <th>Elemento</th>
+                <th>Descripcion</th>
+                <th>Documentacion</th>
+            </tr>
+        </thead>
+        <tbody>
+                <td>html</td>
+                <td>representa la raiz del documento HTML</td>
+                <td><a href="https://example.com" target= "_blank">Website</a></td>
+        </tbody>
+    </table>
 </body>
 </html>
