Tarea de Lunes Terminada

--- a/index.html
+++ b/index.html
@@ -7,20 +7,44 @@
     <title>Document</title>
 </head>
 <body>
-    <div>hola</div>
+    <h1>RECURSOS PARA DESARROLLADORES</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Descripcion</th>
+                <th>Enlace</th>
+            </tr>
+        </thead>
+   
+        <tbody>
+                <td>MDN</td>
+                <td>Documentacion sobre css, html, JavaScript y APIS web.</td>
+                <td><a href="https://developer.mozilla.org/es/" target= "_blank">Ir a la pagina</a></td>
+        </tbody>
+        <tbody>
+            <td>HTML STANDARD</td>
+            <td>Especificacion de HTML.</td>
+            <td><a href="https://html.spec.whatwg.org/" target= "_blank">Ir a la pagina</a></td>
+        </tbody>
+     
+
+    </table>
+    <hr>
+    <h1>ELEMENTOS HTML</h1>
     <table>
         <thead>
             <tr>
                 <th>Elemento</th>
                 <th>Descripcion</th>
-                <th>Documentacion</th>
+                <th>Documentaciòn</th>
             </tr>
         </thead>
         <tbody>
-                <td>html</td>
-                <td>representa la raiz del documento HTML</td>
-                <td><a href="https://example.com" target= "_blank">Website</a></td>
-        </tbody>
+            <td>HTML</td>
+            <td>Representa la raiz del documento HTML.</td>
+            <td><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/html" target= "_blank">Ir a la pagina</a></td>
+    </tbody>
     </table>
 </body>
 </html>
