Se agrego Flexbox

--- a/pag_css.html
+++ b/pag_css.html
@@ -13,21 +13,32 @@
     <header>
         <div class="wrapper">
             <div class="logo">
-                COLORES
+                MI MANUAL
             </div>
+            <nav>
+                <a href="index.html">INICIO</a>
+                <a href="pag_html.html">HTML</a>
+                <a href="pag_css.html">CSS</a>
+                <a href="pag_practica.html">PRACTICA</a>
+                <a href="pag_flexbox.html">FLEXBOX</a>
+            </nav>
         </div>
 
     </header>
+
+<h1>Colores</h1>
+
 <div class="contenedor">
     <div class="tarjeta">
         <figure>
             <img src="./img_css/colors.jpg" alt="">
         </figure>
-        <h3>Usando los nombres de colores</h3>
-        <p> podemos especificar que el color del párrafo sea rojo con la siguiente regla:</p>
-        <pre>p{
-        color: red;
-        }
+        <h3>USANDO NOMBRE DE COLORES</h3>
+        <p> Podemos especificar que el color del párrafo sea rojo con la siguiente regla:</p>
+        <pre>
+            p{
+                color: red;
+            }
         </pre>
             <div class="contenido">
                 <a href="https://www.w3.org/TR/css-color-3/#svg-color" target="_blank">Lista Colores</a>    
@@ -36,7 +47,7 @@
  
         <div class="tarjeta">
          <figure>
-             <img src="./img_css/RGB-Color-Model.jpg" alt="">
+             <img src="./img_css/rgb.png" alt="">
          </figure>
          <h3>RGB</h3>
          <h4>El parámetro red</h4>
@@ -64,7 +75,7 @@
             <p><li>Los dos dígitos del medio indican el color verde.</li></p>
             <p><li>Los dos últimos dígitos indican el color azul.</li></p>
          <div class="contenido">
-            <a href="https://g.co/kgs/sxEn2S" target="_blank">Herramienta en Linea</a> 
+            <a href ="https://g.co/kgs/sxEn2S" target="_blank">Herramienta en Linea</a> 
          </div>
         </div> 
     <div class="tarjeta">
@@ -100,14 +111,7 @@
         </div>
     </div>
 </div>
-<header>
-    <div class="wrapper">
-        <div class="logo">
-            SELECTORES
-        </div>
-    </div>
-
-</header>
+<h1>Selectores</h1>
 <table>
     <thead>
         <tr>
@@ -296,15 +300,7 @@
     </tbody>
 </table>
 
-<hr>
-<header>
-    <div class="wrapper">
-        <div class="logo">
-            Unidades
-        </div>
-    </div>
-
-</header>   
+<h1>Unidades</h1> 
 <table>
     <h3>Unidades de longitud absoluta</h3>
     <thead>
@@ -418,16 +414,11 @@
 
     </tbody>
 </table>
-<hr>
-<header>
-    <div class="wrapper">
-        <div class="logo">
-            Propiedades
-        </div>
-    </div>
 
-</header>  
+<h1>Propiedades</h1> 
+
 <h3>Contenido</h3>
+
 <table>
     <thead>
         <th>Propiedad</th>
@@ -455,7 +446,7 @@
             <td><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/min-width" target="_blank">min-width</a></td>
         </tr>
         <tr>
-            <td>max-width</td>  z
+            <td>max-width</td>  
             <td>none</td>
             <td>No</td>
             <td>el porcentaje como se especifica o la longitud absoluta.</td>
