--- a/pag_html.html
+++ b/pag_html.html
@@ -11,11 +11,19 @@
 <header>
     <div class="wrapper">
         <div class="logo">
-            RECURSOS PARA DESARROLLADORES
+            MI MANUAL
         </div>
+        <nav>
+            <a href="index.html">INICIO</a>
+            <a href="pag_html.html">HTML</a>
+            <a href="pag_css.html">CSS</a>
+            <a href="pag_practica.html">PRACTICA</a>
+            <a href="pag_flexbox.html">FLEXBOX</a>
+        </nav>
     </div>
-</header>
 
+</header>
+<h1 class="efecto-lineas">Recurso para Desarroladores</h1>
 <table>
     <thead>
         <tr>
@@ -40,13 +48,7 @@
 
 </table>
 
-<header>
-    <div class="wrapper2">
-        <div class="logo2">
-            ELEMENTOS HTML
-        </div>
-    </div>
-</header>
+<h1 class="efecto-lineas">Elementos HTML</h1>
 <!--<img src="img/html.png" alt="HTML">-->
 <table>
     <thead>
