--- a/pag_practica.html
+++ b/pag_practica.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./img_css/practica.png">
 </head>
 <body>
-   
+
     <div class="capa"></div>
     <div class="parrafo">
         <h1>La tecnologia en la actualidad</h1>
@@ -21,15 +21,15 @@
             La tecnología evoluciona a pasos de gigante, por lo que nos hemos visto obligados a sustituir unas herramientas por otras. Además que todo esto nos han vuelto inútiles. <br> 
             El papel fundamental de la tecnología en la sociedad hoy en día juega un rol muy importante ya que día a día nos van fomentando la importancia de la tecnología dentro de la vida cotidiana, es decir, poco a poco la misma sociedad se ha ido encargando de que los humanos veamos que somos inútiles si no tenemos un aparato que se encargue de hacer nuestros labores de manera sencilla y rápida, al igual que la comunicación que sea mas fácil sin importar la distancia ni tiempo.
         </p>
-        <img class="img2" src="./img_practica/Tecnología-digital-01.png" alt="">s
+        <img class="img2" src="./img_practica/Tecnología-digital-01.png" alt="">
         <p>
             Si bien, sabemos que es de gran utilidad y que todos sin excepción utilizamos la tecnología, pero sin si quiera saber realmente sus funciones ni mucho menos sus consecuencias, <strong> por lo tanto manejamos la tecnología con conciencia o sin ella, sabiendo lo malo que le ocasionamos al ecosistema y a nosotros mismos.</strong> 
             La tecnología ha aportado grandes beneficios a la humanidad, <em>su papel principal es crear el mejoramiento de herramientas y accesorios que han sido útiles para simplificar el ahorro de tiempo y el esfuerzo de trabajo,</em> como los medios de transporte así como los automóviles,aviones etc, han sido de gran beneficio también para nuestras necesidades y para tener una vida más cómoda.
             En nuestra salud ha sido un papel importante la tecnología, por ejemplo <em>gracias a la invención de las vacunas hoy podemos tener una vida mas saludable. </em> Por otro lado la tecnología también ha sido utilizada con fines que perjudican al hombre como el desarrollo de químicos y venenos, entre otros, que perjudican nuestra salud. <br>
             <small>Gracias por su atencion.</small>
         </p>
-
+        <a href="index.html">Ir al Inicio</a>
     </div>
-    
+   
 </body>
 </html>
