--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TECNOLOGIAS WEB</title>
+    <title>MI MANUAL</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./img_css/manual.png">
+    <link rel="icon" href="./img/logom.png">
 
 </head>
 
@@ -14,12 +14,14 @@
     <header>
         <div class="wrapper">
             <div class="logo">
-                Mi Manual
+                MI MANUAL
             </div>
             <nav>
+                <a href="index.html">INICIO</a>
                 <a href="pag_html.html">HTML</a>
                 <a href="pag_css.html">CSS</a>
                 <a href="pag_practica.html">PRACTICA</a>
+                <a href="pag_flexbox.html">FLEXBOX</a>
             </nav>
         </div>
 
@@ -31,6 +33,17 @@
 
     </tbody>
     </table>
-    <footer>JONATAN GERSON TERCEROS ORTEGA</footer>
+    <footer>
+        <div class="nombre_me"></div>
+        JONATAN GERSON TERCEROS ORTEGA
+         </div>  
+         <div class="service">
+        Correo Electornico:
+        <a href="jonatan.terceros@ucb.edu.bo">Puedes escribirme.</a>
+        Contactame:
+        <a href="tel:+591(61616470)">Numero: +591 61616470</a>
+        </div>
+        <img src="./img/logom.png" alt="">
+    </footer>
 </body>
 </html>
