--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MI MANUAL</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./img/logom.png">
+    <link rel="icon" href="./img/logoOfi.jpg">
 
 </head>
 
